test/e2e/emitters/kgateway/testdata/output/backend_tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - hostname: tls.localdev.me
    name: tls-localdev-me-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: backend-tls-test-tls-localdev-me
  namespace: default
spec:
  hostnames:
  - tls.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: BackendConfigPolicy
metadata:
  name: echo-backend-backend-config
  namespace: default
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: echo-backend
  tls:
    secretRef:
      name: backend-tls-cert
    sni: backend-tls.example.com
status:
  ancestors: null
