test/e2e/emitters/kgateway/testdata/output/external_auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - hostname: external-auth.localdev.me
    name: external-auth-localdev-me-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: external-auth-localhost-external-auth-localdev-me
  namespace: default
spec:
  hostnames:
  - external-auth.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: external-auth-localhost-extauth
  namespace: default
spec:
  extAuth:
    httpService:
      authorizationResponse:
        headersToBackend:
        - X-Auth-Token
        - X-User-ID
      backendRef:
        name: auth-service
        namespace: default
        port: 8080
status: {}
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: external-auth-localhost
  namespace: default
spec:
  extAuth:
    extensionRef:
      name: external-auth-localhost-extauth
      namespace: default
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: external-auth-localhost-external-auth-localdev-me
status:
  ancestors: null
