test/e2e/emitters/kgateway/testdata/output/rewrite_target_use_regex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - hostname: rewrite.localdev.me
    name: rewrite-localdev-me-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: rewrite-use-regex-rewrite-localdev-me
  namespace: default
spec:
  hostnames:
  - rewrite.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: RegularExpression
        value: ^/path/one
  - backendRefs:
    - name: echo-backend
      port: 8080
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /after/rewrite
          type: ReplaceFullPath
    matches:
    - path:
        type: PathPrefix
        value: /before/rewrite
status:
  parents: []
