test/e2e/emitters/kgateway/testdata/output/service_upstream.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - hostname: service-upstream.localdev.me
    name: service-upstream-localdev-me-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: service-upstream-test-service-upstream-localdev-me
  namespace: default
spec:
  hostnames:
  - service-upstream.localdev.me
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - group: gateway.kgateway.dev
      kind: Backend
      name: echo-backend-service-upstream
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    ingress2gateway.kubernetes.io/source-ingress: service-upstream-test
  name: echo-backend-service-upstream
  namespace: default
spec:
  static:
    hosts:
    - host: echo-backend.default.svc.cluster.local
      port: 8080
  type: Static
status: {}
